Added a signup page

--- a/mysite/accounts/templates/accounts/signup.html
+++ b/mysite/accounts/templates/accounts/signup.html
@@ -1,1 +1,15 @@
-signup_view.html
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<title>signup</title>
+</head>
+<body>
+	<h1>Signup </h1>
+	<form class="site-form" action="index.html" method="post">
+		{{ form }}
+		<input type="submit" name="Signup">
+	</form>
+
+</body>
+</html>
