--- a/mysite/articles/templates/articles/article_list.html
+++ b/mysite/articles/templates/articles/article_list.html
@@ -1,13 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<title>Articles</title>
-</head>
-<body>
+{% extends "base_layout.html" %}
+
+{% block content %}
 	<h1>Tell me </h1>
 	<p>You are welcome to</p>
+{% endblock %}
 
-</body>
-</html>
 
