--- a/mysite/templates/base_layout.html
+++ b/mysite/templates/base_layout.html
@@ -7,10 +7,30 @@
 	<link rel="stylesheet"  href="{% static 'styles.css' %}">
 </head>
 <body>
+	<header class="wrapper">
+		<h1><a href="{% url 'home' %}">Articles</a></h1>
+		<nav>
+			<ul>
+				{% if user.is_authenticated %}
+				<li>
+					<form class="logout-link" action="{% url 'accounts:logout' %}" method="post">
+						{% csrf_token %}
+						<button type="submit">Logout</button>
+					</form>
+
+				</li>
+				{% else %}
+				<li><a href="{% url 'accounts:login' %}">Login</a></li>
+				<li><a href="{% url 'accounts:signup' %}">Signup</a></li>
+				{% endif %}
+			</ul>
+		</nav>
+		
+	</header>
 	<div class="wrapper">
-		<h1><a href="{% url'list' %}">Articles</a></h1>
+		
 		{% block content %}
-		{% endblock%}
+		{% endblock %}
 	</div>
 </body>
 </html>
